[package]
name = "iana-services"
description = "Rust bindings for IANA services database"
version = "0.1.0"
edition = "2024"
authors = ["cilki"]
repository = "https://github.com/fossable/iana-services/"
readme = "README.md"
license = "Unlicense"

[dependencies]
phf = { version = "0.13.1", default-features = false, optional = true }

[build-dependencies]
phf = { version = "0.13.1", default-features = false, optional = true }
phf_codegen = { version = "0.13.1", optional = true }
reqwest = { version = "0.12.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
], optional = true }
csv = { version = "1.3", optional = true }

[features]
default = []
embed = ["phf", "dep:phf_codegen", "dep:reqwest", "dep:csv"]

# Enable extra info on service records
optional-info = []

# Enable reverse lookups
lookup-by-name = []
